--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ python-dotenv = "^1.0.0"
 pydantic-settings = "^2.7.1"
 asyncio = "^3.4.3"
 pytest-asyncio = "^0.25.3"
+httpx = "^0.27.0"
+langchain = "^0.1.0"
+langchain-community = "^0.0.13"
+litellm = "^1.16.0"
 
 [tool.poetry.dev-dependencies]
 black = "^23.3.0"
