--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,4 +28,5 @@ flake8 = "^6.0.0"
 [tool.pytest.ini_options]
 markers = [
     "asyncio: mark test as an asyncio test",
+    "integration: mark test as an integration test",
 ]
