--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ httpx = "^0.27.0"
 langchain = "^0.1.0"
 langchain-community = "^0.0.13"
 litellm = "^1.16.0"
+rich = "^13.9.4"
 
 [tool.poetry.dev-dependencies]
 black = "^23.3.0"
