--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ langchain = "^0.1.0"
 langchain-community = "^0.0.13"
 litellm = "^1.16.0"
 rich = "^13.9.4"
+asyncpg = "^0.30.0"
 
 [tool.poetry.dev-dependencies]
 black = "^23.3.0"
